<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>beluga_demo_fiducials_localization</name>
  <version>1.0.0</version>
  <description> TBD </description>
  <maintainer email="glpuga@ekumenlabs.com">Gerardo Puga</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>apriltag_ros</depend>
  <depend>beluga_feature_map_server</depend>
  <depend>beluga_april_tag_adapter</depend>
  <depend>beluga_demo_landmark_localization</depend>

  <depend>rclcpp_components</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
