<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>beluga_april_tag_adapter</name>
  <version>1.0.0</version>

  <description>A simple adapter node to republish detections by apriltag_msgs</description>

  <maintainer email="glpuga@ekumenlabs.com">Gerardo Puga</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <depend>apriltag_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>beluga_april_tag_adapter_msgs</depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
