<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>beluga_demo_description</name>
  <version>2.0.0</version>
  <description>Robot descriptions common to all Beluga demos</description>
  <maintainer email="glpuga@ekumenlabs.com">Gerardo Puga</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>

  <depend>launch</depend>
  <depend>nav2_minimal_tb3_sim</depend>
  <depend>robotnik_description</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>mecanum_drive_controller</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
