<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>beluga_demo_gazebo</name>
  <version>2.0.0</version>
  <description>Gazebo simulated scenarios used by Beluga demos</description>
  <maintainer email="glpuga@ekumenlabs.com">Gerardo Puga</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gz_ekumen_worlds</depend>
  <depend>nav2_minimal_tb3_sim</depend>
  <depend>ros_gz_sim</depend>

  <depend>xacro</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
