<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>beluga_demo_teleop</name>
  <version>2.0.0</version>
  <description>Teleoperation functionality for Beluga demos to use</description>
  <maintainer email="glpuga@ekumenlabs.com">Gerardo Puga</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>turtlebot3_teleop</depend>
  <depend>teleop_twist_joy</depend>
  <depend>joy_linux</depend>
  <depend>xterm</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
