<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>beluga_demo_amcl3_localization</name>
  <version>1.0.0</version>
  <description>Demos of Beluga AMCL 3D based on a botanic garden dataset.</description>
  <maintainer email="glpuga@ekumenlabs.com">Gerardo Puga</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>beluga</depend>
  <depend>beluga_ros</depend>
  <depend>libboost-iostreams-dev</depend>
  <depend>libboost-thread-dev</depend>
  <depend>libopenvdb-dev</depend>
  <depend>pcl_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
