<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>beluga_demo_spotlight_detector</name>
  <version>2.0.0</version>

  <description>A simple detector for spotlight landmarks.</description>

  <maintainer email="nespinosa@ekumenlabs.com">Nahuel Espinosa</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>beluga_april_tag_adapter_msgs</depend>
  <depend>image_geometry</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
