<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>beluga_feature_map_server</name>
  <version>2.0.0</version>

  <description>A discrete feature map server for Beluga</description>

  <maintainer email="glpuga@ekumenlabs.com">Gerardo Puga</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>beluga_feature_map_server_msgs</depend>
  <depend>std_srvs</depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <depend>yaml_cpp_vendor</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
